--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.71'
+    ext.supportLibrary_version = '28.0.0'
     repositories {
         google()
         jcenter()
