--- a/constraintexpandablelayout/build.gradle
+++ b/constraintexpandablelayout/build.gradle
@@ -22,9 +22,10 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:transition:$supportLibrary_version"
+    implementation "com.android.support:appcompat-v7:$supportLibrary_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
 repositories {
     mavenCentral()
