--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /local.properties
 /.idea/caches/build_file_checksums.ser
 /.idea/libraries
+/.idea/markdown-navigator
 /.idea/modules.xml
 /.idea/workspace.xml
 .DS_Store
