--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /.idea/caches/build_file_checksums.ser
 /.idea/libraries
 /.idea/markdown-navigator
+/.idea/markdown-navigator.xml
 /.idea/modules.xml
 /.idea/workspace.xml
 .DS_Store
