--- a/build.gradle
+++ b/build.gradle
@@ -2,17 +2,20 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.0'
-        gradle_version = '3.2.1'
+        kotlin_version = '1.3.61'
+        gradle_version = '3.5.3'
         android_maven_version = '1.5'
         supportLibrary_version = '28.0.0'
         constraint_version = '1.1.3'
+        appcompat_version = '1.1.0'
+        transition_version = '1.3.0'
     }
 
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
