--- a/build.gradle
+++ b/build.gradle
@@ -2,22 +2,23 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.61'
+        kotlin_version = '1.6.10'
         gradle_version = '3.5.3'
         android_maven_version = '1.5'
         supportLibrary_version = '28.0.0'
-        constraint_version = '1.1.3'
-        appcompat_version = '1.1.0'
-        transition_version = '1.3.0'
+        constraint_version = '2.1.3'
+        appcompat_version = '1.4.1'
+        transition_version = '1.4.1'
+        material_version = '1.5.0'
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "com.android.tools.build:gradle:7.1.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.github.dcendents:android-maven-gradle-plugin:$android_maven_version"
     }
@@ -26,7 +27,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
     }
 }
